--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,13 @@
     <div class="wrapper_wide">
       <nav>
         <ul>
-          
+          <% unless podcast_signed_in? %>
+            <li><%= link_to "Sign In", new_podcast_session_path %></li>
+            <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
+          <% else %>
+            <li><a href="#">Dashboard</a></li>
+            <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
