add gem aws & paperclip & update ui

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,6 +1,6 @@
 #background {
+  background-image: image-url("homepage_background.jpg");
   height: 100vh;
-  background-image: image-url("bg.jpeg");
   background-size: cover;
   background-position: center;
   text-align: center;
