--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -132,16 +132,16 @@ body {
 }
 
 .podcasts_banner {
-  background-image: image-url("podcasts_banner.jpg");
+  background-image: image-url("bn.jpg");
   margin-bottom: 4rem;
 }
 
 .sign_up_banner {
-  background-image: image-url("sign_up_banner.jpg");
+  background-image: image-url("inbn.jpg");
 }
 
 .sign_in_banner {
-  background-image: image-url("sign_in_banner.jpg");
+  background-image: image-url("upbn.jpg");
 }
 
 .pagination:before,
