--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
       <p class="notice"><%= notice %></p>
     <% end %>
 
+    <% unless current_page?(root_path) %>
+	    <%= render 'layouts/header'; %>
+    <% end %>
+
     <%= yield %>
 
   </body>
