--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,12 @@
       <nav>
         <ul>
           <% unless podcast_signed_in? %>
+            <li><%= link_to "Explore", podcasts_path %></li>
             <li><%= link_to "Sign In", new_podcast_session_path %></li>
             <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
           <% else %>
             <li><a href="#">Dashboard</a></li>
+            <li><%= link_to "Explore", podcasts_path %></li>
             <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
           <% end %>
         </ul>
@@ -15,5 +17,9 @@
     </div>
   </header>
   <div class="wrapper_skinny">
-     </div>
+    <h1>Discover your new favorite <span class="responsive_break">podcast, or create your own.</span></h1>
+    <%= link_to "Create a Podcast", new_podcast_registration_path, class: "button button_highlight" %>
+     <%= link_to "Explore", podcasts_path, class: "button button_white" %>
+
+  </div>
 </div>
