--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -28,7 +28,6 @@
 	<div id="episode_content">
 		<div class="wrapper_skinny">
 			<%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail" %>
-
 			<h2><%= @episode.title %></h2>
 			<p class="description"><%= @episode.description %></p>
 
@@ -89,3 +88,16 @@
 	</div>
 </div>
 
+<script>
+	$(document).ready(function(){
+	  $("#jquery_jplayer_1").jPlayer({
+	    ready: function () {
+	      $(this).jPlayer("setMedia", {
+	        mp3: "<%= @episode.mp3.url %>",
+	      });
+	    },
+	    swfPath: "/js",
+	    supplied: "mp3"
+	  });
+	});
+</script>
