--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -17,6 +17,6 @@
 				<% end %>
 			<% end %>
 		</ul>
-
+		<%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
 	</div>
 </div>
