--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -39,6 +39,7 @@
           </li>
         <% end %>
       </ul>
+       <%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
 
     </div>
   </div>
