--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -10,7 +10,7 @@
   <div id="links">
     <div class="wrapper_skinny">
       <ul>
-        <li class="current">Episodes</li>
+        <li class="current">Episode Cast</li>
         <li><%= link_to "New Episode", new_podcast_episode_path(@podcast) %></li>
         <li><%= link_to "Account Settings", edit_podcast_registration_path %></li>
         <li><%= link_to "View Podcast", podcast_path(current_podcast) %></li>
@@ -22,24 +22,24 @@
     <div class="wrapper_skinny">
       <ul class="cf">
         <% @episodes.each do |episode| %>
-          <li class="cf">
-            <div class="episode_thumbnail">
-              <a href="#">
-                <%= image_tag episode.episode_thumbnail.url(:medium) %>
-              </a>
+        <li class="cf">
+          <div class="episode_thumbnail">
+            <a href="#">
+              <%= image_tag episode.episode_thumbnail.url(:medium) %>
+            </a>
+          </div>
+          <div class="episode_overview">
+            <h2><%= link_to episode.title, podcast_episode_path(@podcast, episode) %></h2>
+            <p class="description"><%= truncate(episode.description, lenght: 160) %></p>
+            <div class="authorized_links">
+              <%= link_to "Edit", edit_podcast_episode_path(@podcast, episode) %>
+              <%= link_to "Delete", podcast_episode_path(@podcast, episode), method: :delete, data: {confirm: "Are you sure?"} %>
             </div>
-            <div class="episode_overview">
-              <h2><%= link_to episode.title, podcast_episode_path(@podcast, episode) %></h2>
-              <p class="description"><%= truncate(episode.description, lenght: 160) %></p>
-              <div class="authorized_links">
-                <%= link_to "Edit", edit_podcast_episode_path(@podcast, episode) %>
-                <%= link_to "Delete", podcast_episode_path(@podcast, episode), method: :delete, data: {confirm: "Are you sure?"} %>
-              </div>
-            </div>
-          </li>
+          </div>
+        </li>
         <% end %>
       </ul>
-       <%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
+      <%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
 
     </div>
   </div>
